...
///
/// **Note: The users in this list are stripped out from the production build for security.**
const List<SectionedListEntry<_TestUser>> _users = [
  SectionedListHeader("Základní"),
  SectionedListItem(
    _TestUser(
      "test-zo-charita",
      "[charita]",
      "Test Charita",
      "zachranobed.charita.test@gmail.com",
      "ZOcharitaTest8359",
    ),
  ),
...

  @override
  Widget build(BuildContext context) {
    return UiOutlineButton(
      size: UiButtonSize.medium(),
      text: context.l10n.testUsers,
      semanticsIdentifier: 'login_test_users_button',
      onPressed: () async {
        final user = await _showTestUsers(context);
        if (user == null) {
          return;
        }

...
