...
      return const SizedBox();
    }
    return ScreenScaffold.universalBuilder(
      appBar: Padding(
        padding: const EdgeInsets.symmetric(horizontal: 8.0),
        child: Semantics(
          identifier: 'overview_welcome_tile',
          child: UiWelcomeTile(
            entityName: user.establishmentName,
            onPressed: () {
              context.router.push(const ProfileRoute());
            },
          ),
        ),
      ),
      builder: (context) => Semantics(
        identifier: 'overview_screen',
        container: true,
        child: SingleChildScrollView(
          child: Column(
            children: [
              StreamBuilder<List<Banner>>(
                stream: _bannersStream,
...
