...
              semanticsIdentifier: 'login_password_field',
            ),
            const SizedBox(height: 32),
            UiPrimaryButton(
              text: context.l10n.signIn,
              size: UiButtonSize.medium(),
              semanticsIdentifier: 'login_submit_button',
              onPressed: () async {
                if (_formKey.currentState!.validate()) {
                  await _logIn();
                }
              },
            ),
...
